# advent-of-code

./: CMakeLists.txt  README.md
common/: CMakeLists.txt  common.cpp  common.h
day-1/: CMakeLists.txt  part_1.cpp
day-2/: CMakeLists.txt  main.cpp
